# training-day

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/db/: session.py
backend/app/models/: __init__.py  exercise.py  exercise_log.py  seed.py  user.py  workout_session.py
backend/app/schemas/: __init__.py  training.py
docs/: development-log.md  free-web-demo.md  progress-map.md
mobile/: .gitignore  app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: +html.tsx  _layout.tsx  settings.tsx
mobile/app/(tabs)/: index.tsx
mobile/app/day/: [date].tsx
mobile/app/import/: file.tsx  index.tsx  preview.tsx  screenshot.tsx
mobile/app/setup/: [muscle].tsx  _layout.tsx  add.tsx  config.tsx  execute.tsx  index.tsx  queue.tsx
mobile/src/components/: CalendarArchive.tsx  LanguageSwitch.tsx  MuscleSegmentRing.tsx  ThemeSwatches.tsx
mobile/src/constants/: theme.ts
mobile/src/data/: archiveSeed.ts  exerciseSeed.ts
mobile/src/i18n/: LanguageProvider.tsx  translations.ts
mobile/src/import/: workoutImport.ts
mobile/src/theme/: AppThemeProvider.tsx
mobile/src/training/: TrainingProvider.tsx
mobile/src/types/: training.ts
