[project]
name = "minimal-fitness-backend"
version = "0.1.0"
description = "FastAPI backend for the Minimal Fitness mobile app."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
